Connects to robot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,9 +33,14 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
 endif()
 
 include_directories(".")
-
+find_library(socket REQUIRED)
 add_executable(tests test/main.cpp
 			test/Meca500_test.cpp
 			ConnectToRobot.c)
 target_link_libraries(tests gtest_main)
-target_link_libraries(tests libsocket)
+target_link_libraries(tests socket)
+
+add_executable(meca500 main.c
+			ConnectToRobot.c)
+target_link_libraries(meca500 socket)
+
