Deactivate robot done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(meca500 main.c
 			GetSocket.c
 			DestroySocket.c
 			ActivateRobot.c
+			DeactivateRobot.c
 			ReadFromSocket.c
 			HomeRobot.c)
 target_link_libraries(meca500 socket)
