Add std=c++11 to cmakelists to get it to compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.6.2 FATAL_ERROR)
 
 project("Meca500")
 
 add_executable(meca500 main.cpp
-#			GetSocket.cpp
+			GetSocket.cpp
 #			DestroySocket.cpp
 #			ActivateRobot.cpp
 #			DeactivateRobot.cpp
@@ -11,5 +11,7 @@ add_executable(meca500 main.cpp
 #			HomeRobot.cpp
 #			SetJoints.cpp
 )
-target_link_libraries(meca500 socket)
-
+target_link_libraries(meca500 socket++)
+target_compile_options(meca500 PRIVATE
+			-std=c++11
+)
