--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required(VERSION 3.6.2 FATAL_ERROR)
 
 project("Meca500")
 
+add_subdirectory(test)
+
 add_executable(meca500 main.cpp
-			GetSocket.cpp
+			Meca500.cpp
+#			GetSocket.cpp
 #			DestroySocket.cpp
 #			ActivateRobot.cpp
 #			DeactivateRobot.cpp
@@ -11,7 +14,9 @@ add_executable(meca500 main.cpp
 #			HomeRobot.cpp
 #			SetJoints.cpp
 )
-target_link_libraries(meca500 socket++)
+target_link_libraries(meca500 
+			socket++
+)
 target_compile_options(meca500 PRIVATE
 			-std=c++11
 )
