--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.6.2 FATAL_ERROR)
 
-
-
 set(name "meca500_test")
 set(MECA500_DIR "../")
 set(GTEST_PATH "googletest")
@@ -11,7 +9,7 @@ add_subdirectory(${GTEST_PATH})
 include_directories(${GTEST_PATH}/include)
 include_directories(${MECA500_DIR})
 add_executable(${name}
-		main.cpp
+		main_test.cpp
 		Messages_test.cpp
 		Sending_test.cpp
 		${MECA500_DIR}/Messages.cpp
