--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(${MECA500_DIR})
 add_executable(${name}
 		main_test.cpp
 		Messages_test.cpp
-		Sending_test.cpp
+		Sending_tests.cpp
 		${MECA500_DIR}/Messages.cpp
 		${MECA500_DIR}/Meca500.cpp
 )
