--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,9 +10,9 @@ include_directories(${GTEST_PATH}/include)
 include_directories(${MECA500_DIR})
 add_executable(${name}
 		main_test.cpp
-		Messages_test.cpp
+		MessageAssembler_test.cpp
 		Sending_tests.cpp
-		${MECA500_DIR}/Messages.cpp
+		${MECA500_DIR}/MessageAssembler.cpp
 		${MECA500_DIR}/Meca500.cpp
 )
 target_link_libraries(${name} 
