--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,12 +8,17 @@ project(${name})
 add_subdirectory(${GTEST_PATH})
 include_directories(${GTEST_PATH}/include)
 include_directories(${MECA500_DIR})
+
+file(GLOB TEST_SRC
+	"*.cpp"
+)
+
+set(MECA_SRC "${MECA500_DIR}/MessageAssembler.cpp")
 add_executable(${name}
-		main_test.cpp
-		MessageAssembler_test.cpp
-		Sending_tests.cpp
+		${TEST_SRC}
 		${MECA500_DIR}/MessageAssembler.cpp
-		${MECA500_DIR}/Meca500.cpp
+		${MECA500_DIR}/Sending.cpp
+		${MECA500_DIR}/Exception.h
 )
 target_link_libraries(${name} 
 			socket++
