Reorganize structure, add pthread linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,21 +2,18 @@ cmake_minimum_required(VERSION 3.6.2 FATAL_ERROR)
 
 project("Meca500")
 
+set(PROJECT_NAME Meca500)
+
+set(SRC src)
+file(GLOB SRC_FILES ${SRC}/*.cpp)
 add_subdirectory(test)
 
-add_executable(meca500 main.cpp
-			Meca500.cpp
-#			GetSocket.cpp
-#			DestroySocket.cpp
-#			ActivateRobot.cpp
-#			DeactivateRobot.cpp
-#			ReadFromSocket.cpp
-#			HomeRobot.cpp
-#			SetJoints.cpp
+add_executable(${PROJECT_NAME} ${SRC_FILES})
+
+target_link_libraries(${PROJECT_NAME}
+  socket++
+  pthread
 )
-target_link_libraries(meca500 
-			socket++
-)
-target_compile_options(meca500 PRIVATE
+target_compile_options(${PROJECT_NAME} PRIVATE
 			-std=c++14
 )
