--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project("Meca500")
 set(PROJECT_NAME Meca500)
 
 set(SRC src)
-file(GLOB SRC_FILES ${SRC}/*.cpp)
+file(GLOB SRC_FILES ${SRC}/[^.]*.cpp)
 add_subdirectory(test)
 
 add_executable(${PROJECT_NAME} ${SRC_FILES})
